[build-system]
requires = ["setuptools", "setuptools_scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "h2o_MD_analysis"
dynamic = ["version"]
description = "Analysis of the MD trajectories of the H2O system."
authors = [{ name = "Yifan Li" }]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
]
readme = "README.md"
requires-python = ">3.6"
keywords = ["h2o", "molecular dynamics", "analysis"]
dependencies = [
    "numpy",
    "ase",
    "mpi4py"
]

[project.urls]
homepage = "https://github.com/Yi-FanLi/h2o_MD_analysis"

[project.scripts]
rdf = "src.rdf:main"

[project.optional-dependencies]
docs = [
]

[tool.setuptools.packages.find]
include = ["src"]

[tool.setuptools_scm]
write_to = "src/_version.py"

[tool.ruff]
select = [
    "E", # errors
    "F", # pyflakes
    "D", # pydocstyle
	"I", # isort
    "UP", # pyupgrade
    "C4", # flake8-comprehensions
    "RUF", # ruff
    "NPY", # numpy
]

ignore = [
    "E501", # line too long
    "F841", # local variable is assigned to but never used
    "E741", # ambiguous variable name
    "E402", # module level import not at top of file
    "D100", # TODO: missing docstring in public module
    "D101", # TODO: missing docstring in public class
    "D102", # TODO: missing docstring in public method
    "D103", # TODO: missing docstring in public function
    "D104", # TODO: missing docstring in public package
    "D105", # TODO: missing docstring in magic method
    "D205", # 1 blank line required between summary line and description
    "D401", # TODO: first line should be in imperative mood
    "D404", # TODO: first word of the docstring should not be This
]
ignore-init-module-imports = true

[tool.ruff.pydocstyle]
convention = "numpy"
